kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: travel-share
  labels:
    istio.io/rev: 1-8
